# apps/api/src/impl/accounts.api.ts
@@ -8,6 +8,7 @@ import type {
   Balance,
   CreateAccountRequest,
   ListAccountTransactions200Response,
+  UploadAccountKycRequest,
 } from '@qzd/sdk-api/server';
 
 @Injectable()
@@ -35,6 +36,13 @@ export class AccountsApiImpl extends AccountsApi {
     | ListAccountTransactions200Response
     | Promise<ListAccountTransactions200Response>
     | Observable<ListAccountTransactions200Response> {
+    throw new Error('Method not implemented.');
+  }
+
+  override uploadAccountKyc(
+    uploadAccountKycRequest: UploadAccountKycRequest,
+    request: Request,
+  ): Account | Promise<Account> | Observable<Account> {
     throw new Error('Method not implemented.');
   }
 }
